// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StaffViewRoute /> basic route 1`] = `
<Route
  exact={true}
  path="/path"
>
  <Redirect
    push={true}
    to="/retroactive-certification"
  />
</Route>
`;

exports[`<StaffViewRoute /> route needing user data 1`] = `
<Route
  computedMatch={Object {}}
  exact={true}
  path="/retroactive-certification/staff-view/claimant-status"
>
  <Redirect
    push={true}
    to="/retroactive-certification"
  />
</Route>
`;

exports[`<StaffViewRoute /> route needing user data, without user data 1`] = `
<Route
  computedMatch={Object {}}
  exact={true}
  path="/retroactive-certification/staff-view/claimant-status"
>
  <Redirect
    push={true}
    to="/retroactive-certification"
  />
</Route>
`;
